--- a/Hits_Runs_2019_LinReg.ipynb
+++ b/Hits_Runs_2019_LinReg.ipynb
@@ -9,8 +9,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import statsmodels.api as sm\n",
-    "#The goal is to determine the correlation between number of runs and at-bats for each team in 2019\n",
-    "#R2 and P-values are "
+    "#The goal is to determine and graph the correlation between number of runs and hits for each team in 2019\n",
+    
    ]
   },
   {
